fix broken caches list on firefox

--- a/app/styles/app/layouts/caches.sass
+++ b/app/styles/app/layouts/caches.sass
@@ -3,6 +3,7 @@
   margin-top: 1rem
   font-size: $font-size-sm
   color: $grey3
+  clear: both
 
   .tile-xs
     padding-left: 0
